docs/2.8/api/com.rakuten.tech.mobile.miniapp.permission/index.md
[miniapp](../index.md) / [com.rakuten.tech.mobile.miniapp.permission](./index.md)

## Package com.rakuten.tech.mobile.miniapp.permission

### Types

| [MiniAppCustomPermission](-mini-app-custom-permission/index.md) | A data class to hold the custom permission with grant results using Pair per MiniApp.`data class MiniAppCustomPermission` |
| [MiniAppCustomPermissionResponse](-mini-app-custom-permission-response/index.md) | A data class to prepare the json response of custom permissions to be sent from this SDK.`data class MiniAppCustomPermissionResponse` |
| [MiniAppCustomPermissionResult](-mini-app-custom-permission-result/index.md) | Type of miniapp custom permission result.`enum class MiniAppCustomPermissionResult` |
| [MiniAppCustomPermissionType](-mini-app-custom-permission-type/index.md) | Type of miniapp custom permission.`enum class MiniAppCustomPermissionType` |
| [MiniAppDevicePermissionType](-mini-app-device-permission-type/index.md) | Type of miniapp device permission.`enum class MiniAppDevicePermissionType` |
| [MiniAppPermissionType](-mini-app-permission-type.md) | Type of miniapp permission.`typealias ~~MiniAppPermissionType~~ = `[`MiniAppDevicePermissionType`](-mini-app-device-permission-type/index.md) |

